--- a/cicd/templates/tag_created/triggerBindingTagCreated.yaml
+++ b/cicd/templates/tag_created/triggerBindingTagCreated.yaml
@@ -8,6 +8,6 @@ spec:
     - name: gitrepositoryurl
       value: $(body.repository.clone_url)
     - name: gitrevision
-      value: $(body.head_commit.id)
+      value: $(extensions.tag_name)
     - name: gittag
       value: $(extensions.tag_name)
