--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,12 @@ members = [
 
 [profile.release]
 lto = true
+
+[workspace.dependencies]
+tokio = { version = '1', features = ['macros', 'rt-multi-thread', 'io-std'] }
+tracing = '0.1'
+serde = '1.0'
+chrono = { version = "0.4", features = ["serde"] }
+serde_json = "1.0"
+serde_yaml = "0.9"
+utoipa = { version = "4", features = ["chrono"] }
