--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -6,21 +6,21 @@ default-run = "server"
 
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { workspace = true }
 markdown_header = { path = "../../libs/back/markdown_header" }
 markdown_struct = { path = "../../libs/back/markdown_struct" }
 tool_tracing = { path = "../../libs/back/tool_tracing" }
-serde = "1.0"
-serde_json = "1.0"
-serde_yaml = "0.9"
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 dotenvy = "0.15"
-tracing = "0.1"
+tracing = { workspace = true }
 
 # Api Dependencies
 
-tokio = { version = "1.39", features = ["rt-multi-thread"] }
+tokio = { workspace = true }
 actix-web = "4"
-utoipa = { version = "4", features = ["actix_extras", "chrono"] }
+utoipa = { workspace = true, features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
 actix-cors = "0.7"
 tracing-actix-web = "0.7"
