--- a/libs/back/markdown_header/Cargo.toml
+++ b/libs/back/markdown_header/Cargo.toml
@@ -8,9 +8,9 @@ enum-iterator = "2.1"
 getset = "0.1"
 quick-error = "2.0"
 regex = "1.10"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1.0"
-serde_yaml = "0.9"
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 toml = "0.8"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
