--- a/libs/back/markdown_struct/Cargo.toml
+++ b/libs/back/markdown_struct/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-serde_json = "1.0"
-serde_yaml = "0.9"
+serde = { workspace = true }
+chrono = { workspace = true }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 markdown_header = { path = "../markdown_header" }
-utoipa = { version = "4", features = ["chrono"] }
+utoipa = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
