--- a/.github/workflows/rust-sbom.yml
+++ b/.github/workflows/rust-sbom.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           path: .
           artifact-name: sbom.json
-          format: json
+          format: cyclonedx-json
       - name: Download math result for job 2
         uses: actions/download-artifact@v4
         with:
