--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@primevue/themes": "^4.2.5",
     "highlight.js": "^11.10.0",
-    "pinia": "^2.3.0",
+    "pinia": "^2.3.1",
     "primevue": "^4.2.5",
     "tslib": "^2.7.0",
     "vue": "^3.5.8",
@@ -42,16 +42,16 @@
     "@primevue/auto-import-resolver": "^4.0.4",
     "@swc-node/register": "^1.10.9",
     "@swc/cli": "~0.5.0",
-    "@swc/core": "~1.7.22",
+    "@swc/core": "~1.10.8",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "29.5.14",
-    "@types/node": "22.9.0",
+    "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.1",
     "@vitest/ui": "^2.1.1",
-    "@vue/eslint-config-prettier": "9.0.0",
+    "@vue/eslint-config-prettier": "10.2.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.20",
@@ -72,7 +72,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2",
     "typescript": "5.7.3",
-    "unplugin-vue-components": "^0.27.3",
+    "unplugin-vue-components": "^0.28.0",
     "vite": "^5.4.6",
     "vitest": "^2.1.1",
     "vue-tsc": "^2.0.29"
