--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 utoipa = { version = "5", features = ["chrono"] }
+markdown = { version = "1.0.0-alpha.21", features = ["serde"] }
