--- a/libs/back/markdown_struct/Cargo.toml
+++ b/libs/back/markdown_struct/Cargo.toml
@@ -10,5 +10,5 @@ serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 markdown_header = { path = "../markdown_header" }
 utoipa = { workspace = true }
-
+markdown = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
