--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "@monodon/rust": "^2.0.0-beta.1",
     "@nx/cypress": "20.3.3",
     "@nx/devkit": "20.3.3",
@@ -64,7 +65,6 @@
     "jest-environment-jsdom": "29.7.0",
     "jsdom": "^26.0.0",
     "nx": "20.3.3",
-    "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "sass": "1.83.4",
     "tailwindcss": "^4.0.0",
