feat: WIP commit before sleep

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,33 @@
   "css.customData": [".vscode/tailwind.json"],
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "sarif-viewer.connectToGithubCodeScanning": "off"
+  "sarif-viewer.connectToGithubCodeScanning": "off",
+  "workbench.preferredDarkColorTheme": "Sweet Dracula",
+  "workbench.iconTheme": "material-icon-theme",
+  "cSpell.language": "en,fr",
+  "gitlens.plusFeatures.enabled": false,
+  "editor.guides.bracketPairs": true,
+  "cSpell.words": [
+    "actix",
+    "bindgen",
+    "dotenvy",
+    "easter",
+    "highlightjs",
+    "mdast",
+    "mdxjs",
+    "Mdxjs",
+    "monodon",
+    "nowrap",
+    "openapi",
+    "podman",
+    "primeui",
+    "primevue",
+    "sarif",
+    "serde",
+    "toggleable",
+    "tokio",
+    "unplugin",
+    "utoipa",
+    "xlarge"
+  ]
 }
