--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,5 @@
 {
   "recommendations": [
-    "nrwl.angular-console",
     "esbenp.prettier-vscode",
     "rust-lang.rust-analyzer",
     "github.copilot",
@@ -15,6 +14,13 @@
     "proxzima.sweetdracula",
     "wdhongtw.gpg-indicator",
     "vadimcn.vscode-lldb",
-    "firsttris.vscode-jest-runner"
+    "naumovs.color-highlight",
+    "formulahendry.auto-rename-tag",
+    "PKief.material-icon-theme",
+    "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-french",
+    "usernamehw.errorlens",
+    "eamodio.gitlens",
+    "oderwat.indent-rainbow"
   ]
 }
