--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -19,6 +19,10 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: ['main']
+    paths:
+      - '**/back/**/*.rs'
+      - 'folio_content/**/*'
+      - '**/pong/**/*.rs'
   schedule:
     - cron: '50 23 * * *'
 
