feat: WIP new ui and upgrade package

--- a/folio_content/content/home.yaml
+++ b/folio_content/content/home.yaml
@@ -10,12 +10,9 @@ presentation: |
 coverTitle:
 - Développeur.
 - Passionné.
-- Ops.
-- Back.
-- Front.
-- Kube and Co.
-- Architecture.
-- Too much coffee.
+- Ops, Back, Front.
+- GitOps, Kube and Co.
+- Too much coffee ☕.
 - And lot's more.
 cvUrl: cv.pdf
 url:
