feat: Add Projects in api (and upgrade the api)

--- a/folio_content/content/home.yaml
+++ b/folio_content/content/home.yaml
@@ -7,11 +7,11 @@ presentation: |
   Malgré le fait que je sois un développeur, je suis aussi un passionné d'architecture et capable de passer du Software au Hardware.
   Principalement autodidacte, j'ai beaucoup appris en effectuant des projects personnels et a travers mes différentes expériences.
   Alors, bienvenue et bonne visite !
+shortDescription: Dev, Ops, Archi et Passionné
 coverTitle:
-- Développeur.
-- Passionné.
 - Ops, Back, Front.
 - GitOps, Kube and Co.
+- Made with ❤️ and
 - Too much coffee ☕.
 - And lot's more.
 cvUrl: cv.pdf
