--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
   "editor.guides.bracketPairs": true,
   "cSpell.words": [
     "actix",
+    "Batleforc",
     "bindgen",
     "dotenvy",
     "easter",
