--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "rust:test": "cargo llvm-cov --open --ignore-filename-regex 'init'",
     "rust:start": "podman compose up -d && nx run back:run",
     "rust:generate": "cargo run --bin swagger -- ./swagger.json",
-    "vue:gen_api": "npx @hey-api/openapi-ts -i ./swagger.json -o libs/front/api-client/src/api -c @hey-api/client-axios",
-    "vue:test": "vitest run --coverage",
     "rust:api-lint": "spectral lint -f sarif -o ./spectral-report.sarif ./swagger.json",
     "rust:pong": "cargo run --bin pong --target wasm32-unknown-unknown",
-    "rust:pong-build": "cargo build --release --bin pong --target wasm32-unknown-unknown && wasm-bindgen --target web --out-dir ./folio_content/media/pong --out-name 'pong' ./dist/target/wasm32-unknown-unknown/release/pong.wasm "
+    "rust:pong-build": "cargo build --release --bin pong --target wasm32-unknown-unknown && wasm-bindgen --target web --out-dir ./folio_content/media/pong --out-name 'pong' ./dist/target/wasm32-unknown-unknown/release/pong.wasm ",
+    "vue:gen_api": "npx @hey-api/openapi-ts -i ./swagger.json -o libs/front/api-client/src/api -c @hey-api/client-axios",
+    "vue:test": "vitest run --coverage",
+    "vue:start": "nx run front:serve",
+    "api:regenerate": "yarn rust:generate && yarn rust:api-lint && yarn vue:gen_api"
   },
   "private": true,
   "dependencies": {
